# substack-style-rec

./: .gitignore  CLAUDE.md  Dockerfile  HANDOFF.md  Product Requirements Document (PRD) Substack TV-St.md  README.md  package-lock.json  package.json  render.yaml
.claude/: handoff.md
backend/: .dockerignore  .env.example  Dockerfile  config.py  download_from_r2.py  download_videos.py  functions.py  ingest.py  main.py  models.py  pyproject.toml  setup_pixeltable.py  summaries.json
backend/routers/: creators.py  recommendations.py  search.py  videos.py
docs/: BACKEND_SPEC.md
scripts/: CURATION_GUIDE.md  creators_metadata.csv  curate_videos.csv  download_and_collect.py  update_tl_metadata.py  videos_metadata.csv
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/creators/: route.ts
src/app/api/creators/[id]/: route.ts
src/app/api/videos/: route.ts
src/app/api/videos/[id]/: route.ts
src/app/creator/[id]/: page.tsx
src/app/explore/: page.tsx
src/app/how-it-works/: page.tsx
src/app/search/: page.tsx
src/app/upload/: page.tsx
src/app/watch/[id]/: page.tsx
src/components/: architecture-diagram.tsx  creator-card.tsx  hero-feature.tsx  nav.tsx  search-input.tsx  subscribe-button.tsx  video-card.tsx  video-player.tsx  video-row.tsx
src/lib/: api.ts  mock-data.ts  request-cache.ts  twelve-labs.ts  types.ts  user-state.tsx  utils.ts
